This file lists all changes to the game driver which have a visible
impact on its behaviour both towards the mudlib as well as towards
the host system.

For a detailed list of all changes see the file CHANGELOG.

xx-xxx-2019 (LDMud Team) -- 3.6.0
    - Runtime:
       + The string type and all its operation support the full
         Unicode character set (#432).

05-Apr-2019 (LDMud Team) -- 3.5.2
   - Fixed Crashes:
      + Syntax errors when parsing inline closures didn't clean
        up status variables (#866).
      + Destructing newly created interactives resulted in fatal errors.
      + Calling lambda closures with mapping index operations resulted
        in execution of random bytes (#867).
      + #'return in a middle of an expression in a lambda closure could
        result in a fatal error (#868).
      + Replacing the system malloc could result in a segmentation fault
        (#862).
      + A garbage collection when using the slaballoc/smalloc allocator
        with mmap could result in a fatal error.

   - Runtime:
      + Clean-up, reset and swap times can now be configured at runtime
        using configure_driver().
      + Reactions to the signals SIGINT, SIGHUP, SIGUSR1 and SIGUSR2 can
        now be configured using configure_driver().

04-Jan-2018 (LDMud Team) -- 3.5.1
   - Fixed Crashes:
      + missing type declarations resulted in a NULL pointer dereference
        (#859).
      + fixed handling of program updates with triply virtually inherited
        programs.
      + fixed crash when swapping out programs with lvalue references (#854).
      + fixed a crash on exceptions in a call of Python efun closures.
      + compiling a call to Python efuns resulted in an uninitialized type.
      + SQLite crashed when LDMud's allocator replaced the system malloc.

   - Runtime:
      + sl_exec() allows the ATTACH statement now.
      + SQLite log messages are now printed to the debug log (#835).

   - Other: