@@ -19,4 +19,4 @@ GESCHICHTE
         Introduced in LDMud 3.3.713.
 
 SIEHE AUCH
-        convert_charset(E), idna_to_ascii(E), idna_to_unicode(E)
+        idna_to_ascii(E), idna_to_unicode(E)
