@@ -19,4 +19,4 @@ HISTORY
         Introduced in LDMud 3.3.713.
 
 SEE ALSO
-        convert_charset(E), idna_to_ascii(E), idna_to_unicode(E)
+        idna_to_ascii(E), idna_to_unicode(E)
