@@ -1250,232 +1250,6 @@ v_to_text (svalue_t *sp, int num_arg)
 } /* v_to_text() */
 
 /*--------------------------------------------------------------------*/
-#ifdef HAS_ICONV
-
-svalue_t *
-f_convert_charset (svalue_t *sp)
-
-/* EFUN convert_charset()
- *
- *   string convert_charset(string str, string from_cs, string to_cs)
- *
- * Convert the string <str> from charset <from_cs> to charset <to_cs>
- * and return the converted string.
- *
- * The efun is only available on systems with libiconv.
- */
-
-{
-    iconv_t context;
-    
-    string_t *from_cs, *to_cs, *in_str, *out_str;
-
-#if HAS_ICONV_NONCONST_IN
-#   define ICONV_IN_CAST (char**)
-#else
-#   define ICONV_IN_CAST
-#endif
-
-    const char *pIn; /* Input string pointer */
-    size_t in_len;   /* Input length */
-    size_t in_left;  /* Input length left */
-
-    char * out_buf;  /* Output buffer */
-    size_t out_size; /* Size of the output buffer */
-    size_t out_left; /* Size left in output buffer */
-    char  *pOut;     /* Output string pointer */
-
-    in_str = sp[-2].u.str;
-    from_cs = sp[-1].u.str;
-    to_cs = sp->u.str;
-
-    pIn = get_txt(in_str);
-    in_len = mstrsize(in_str);
-    in_left = in_len;
-
-    /* If the input string is empty, we can return immediately
-     * (and in fact must since the allocator will balk at allocating 0 bytes)
-     */
-    if (!in_len)
-    {
-        // just free the 2nd and 3rd argument, return the first one unchanged.
-        free_string_svalue(sp--);
-        free_string_svalue(sp--);
-        return sp;
-    }
-
-    /* Allocate a temporary output string */
-    out_size = in_len > 65536 ? (in_len + 33) : (2 * in_len);
-    out_left = out_size;
-
-    xallocate(out_buf, out_size, "iconv buffer");
-    pOut = out_buf;
-
-    /* Open the iconv context */
-    context = iconv_open(get_txt(to_cs), get_txt(from_cs));
-    if (context == (iconv_t) -1)
-    {
-        xfree(out_buf);
-
-        if (errno == EINVAL)
-            errorf("convert_charset(): Conversion '%s' -> '%s' not supported.\n"
-                 , get_txt(from_cs), get_txt(to_cs)
-                );
-        else
-            errorf("convert_charset(): Error %d.\n", errno);
-        /* NOTREACHED */
-        return sp;
-    }
-
-    /* Convert the string, reallocating the output buffer where necessary */
-    while (in_left)
-    {
-        size_t rc;
-
-        rc = iconv(context, ICONV_IN_CAST &pIn, &in_left, &pOut, &out_left);
-        if (rc == (size_t)-1)
-        {
-            if (errno == E2BIG)
-            {
-                /* Reallocate output buffer */
-                size_t newsize;
-                char * tmp;
-
-                newsize = out_size + (in_len > 128 ? in_len : 128);
-                tmp = rexalloc(out_buf, newsize);
-                if (!tmp)
-                {
-                    iconv_close(context);
-                    xfree(out_buf);
-                    outofmem(newsize, "iconv buffer");
-                    /* NOTREACHED */
-                    return sp;
-                }
-                out_buf = tmp;
-                pOut = out_buf + out_size;
-                out_left = newsize - out_size;
-                out_size = newsize;
-
-                continue;
-            }
-
-            /* Other error: clean up */
-            iconv_close(context);
-            xfree(out_buf);
-
-            if (errno == EILSEQ)
-            {
-                errorf("convert_charset(): Invalid character sequence at "
-                       "index %td\n", 
-                       (ptrdiff_t)(pIn - get_txt(in_str)));
-                /* NOTREACHED */
-                return sp;
-            }
-
-            if (errno == EINVAL)
-            {
-                errorf("convert_charset(): Incomplete character sequence at "
-                       "index %td\n", (ptrdiff_t)(pIn - get_txt(in_str)));
-                /* NOTREACHED */
-                return sp;
-            }
-
-            errorf("convert_charset(): Error %d at index %td\n"
-                 , errno, (ptrdiff_t)(pIn - get_txt(in_str))
-                 );
-            /* NOTREACHED */
-            return sp;
-        } /* if (rc < 0) */
-    } /* while (in_left) */
-
-    /* While the actual conversion is complete, the output stream may now
-     * be in a non-base state. Add the necessary epilogue to get back
-     * to the base state.
-     */
-    while(1)
-    {
-        size_t rc;
-        rc = iconv(context, NULL, NULL, &pOut, &out_left);
-        if (rc == (size_t)-1)
-        {
-            if (errno == E2BIG)
-            {
-                /* Reallocate output buffer */
-                size_t newsize;
-                char * tmp;
-
-                newsize = out_size + (in_len > 128 ? in_len : 128);
-                tmp = rexalloc(out_buf, newsize);
-                if (!tmp)
-                {
-                    iconv_close(context);
-                    xfree(out_buf);
-                    outofmem(newsize, "iconv buffer");
-                    /* NOTREACHED */
-                    return sp;
-                }
-                out_buf = tmp;
-                pOut = out_buf + out_size;
-                out_left = newsize - out_size;
-                out_size = newsize;
-
-                continue;
-            }
-
-            /* Other error: clean up */
-            iconv_close(context);
-            xfree(out_buf);
-
-            if (errno == EILSEQ)
-            {
-                errorf("convert_charset(): Invalid character sequence at "
-                       "index %td\n", (ptrdiff_t)(pIn - get_txt(in_str)));
-                /* NOTREACHED */
-                return sp;
-            }
-
-            if (errno == EINVAL)
-            {
-                errorf("convert_charset(): Incomplete character sequence at "
-                       "index %td\n", (ptrdiff_t)(pIn - get_txt(in_str)));
-                /* NOTREACHED */
-                return sp;
-            }
-
-            errorf("convert_charset(): Error %d at index %td\n"
-                 , errno, (ptrdiff_t)(pIn - get_txt(in_str))
-                 );
-            /* NOTREACHED */
-            return sp;
-        } /* if (rc < 0) */
-
-        /* At this point, the iconv() succeeded: we're done */
-        break;
-    } /* while(1) */
-    
-    iconv_close(context);
-
-    /* Get the return string and prepare the return arguments */
-    out_str = new_n_mstring(out_buf, out_size - out_left, STRING_BYTES);
-    xfree(out_buf);
-    if (!out_str)
-    {
-        outofmem(out_size - out_left, "convert_charset() result");
-        /* NOTREACHED */
-        return sp;
-    }
-
-    free_string_svalue(sp--);
-    free_string_svalue(sp--);
-    free_string_svalue(sp);
-    put_string(sp, out_str);
-    
-    return sp;
-} /* f_convert_charset() */
-
-#endif /* HAS_ICONV */
-
-/*--------------------------------------------------------------------*/
 static p_int *
 sort_string (const string_t * p_in, size_t size, size_t *plen, long ** pos)
 
